Fix proportions and align image in centre

--- a/styles.css
+++ b/styles.css
@@ -14,4 +14,10 @@ ul {
 li {
     margin: 10px;
 }
+img {
+    display: block;
+    height: 400px;
+    width: auto;
+    margin: 20px auto;
+}
 
